# pre-commit-hooks

./: .commitsar.yaml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  setup.cfg  setup.py
hooks/: __init__.py  check_commitsar.py  check_symlinks.py  check_tool.py  present_files_dirs.py  run_cmd.py
