[metadata]
name = hooks
version = main
description = Some out-of-the-box hooks for pre-commit.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vikas027/pre-commit-hooks.git
author = Vikas Kumar
author_email = vikas@reachvikas.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
# install_requires =
#     ruamel.yaml>=0.15
#     toml
python_requires = >=3.7

[options.entry_points]
console_scripts =
    check-commitsar = hooks.check_commitsar:main
    check-symlinks = hooks.check_symlinks:main
